--- a/index.html
+++ b/index.html
@@ -1,44 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <script id="vertex-shader" type="x-shader/x-vertex">
-            precision mediump float;
-
-            attribute vec3 vPosition;
-            attribute vec2 vTexCoord;
-
-            varying vec2 fTexCoord;
-
-            uniform mat4 modelViewMatrix;
-
-            void main() {
-               fTexCoord = vTexCoord;
-               gl_Position = modelViewMatrix * vec4(vPosition, 1.0);
-            }
-        </script>
-        <script id="fragment-shader" type="x-shader/x-fragment">
-            precision mediump float;
-
-            varying vec2 fTexCoord;
-
-            uniform sampler2D texture;
-
-            void main()
-            {
-              gl_FragColor = texture2D( texture, fTexCoord );
-            }
-        </script>
+        <title>Three.js Room</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/PointerLockControls.js"></script>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <canvas id="gl-canvas" width="800" height="800">
-            Sorry, but your browser does not support HTML5's canvas element.
-        </canvas>
-
-        <button id="rotateX">Rotate X</button>
-        <button id="rotateY">Rotate Y</button>
-        <button id="rotateZ">Rotate Z</button>
-
-        <script src="js/initShaders.js"></script>
-        <script src="js/gl-matrix-min.js"></script>
-        <script src="js/app.js"></script>
+        <canvas id="gl-canvas" width="800" height="800"></canvas>
+        <script src="js/room.js"></script>
     </body>
 </html>
