--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                     </div>
                     <div class="d-flex justify-content-evenly">
                         <div>
-                            <label for="lightPosition">Altura:</label>
-                            <input class="form-control mx-1" type="number" id="colorR" name="lightColorR" placeholder="R" required style="width: 70px;">
+                            <label for="height">Altura:</label>
+                            <input class="form-control mx-1" type="number" id="colorR" name="colorR" placeholder="R" required style="width: 70px;">
                         </div>
                         <div>
-                            <label for="lightPosition">Largura:</label>
-                            <input class="form-control mx-1" type="number" id="colorG" name="lightColorG" placeholder="G" required style="width: 70px;">
+                            <label for="width">Largura:</label>
+                            <input class="form-control mx-1" type="number" id="colorG" name="colorG" placeholder="G" required style="width: 70px;">
                         </div>
                         <div>
-                            <label for="lightPosition">Profundidade:</label>
-                            <input class="form-control mx-1" type="number" id="colorB" name="lightColorB" placeholder="B" required style="width: 70px;">
+                            <label for="depth">Profundidade:</label>
+                            <input class="form-control mx-1" type="number" id="colorB" name="colorB" placeholder="B" required style="width: 70px;">
                         </div>
                     </div>
                     <div class="d-flex mt-3">
