--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="menu-div ms-3 d-flex flex-column align-items-center justify-content-center h-100 w-100">
                 <form id="addPrimitiveForm" class="d-flex flex-column align-items-center justify-content-center">
                     <div class="d-flex">
-                        <select class="form-select mb-3">
+                        <select class="form-select mb-3" id="primitiveType">
                             <option value="parallelepiped">Paralelipipedo</option>
                             <option value="piramid">Piramide quadrangular</option>
                         </select>
