--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             });
                         </script>
                     </div>
-                    <button type="submit" class="btn btn-primary mt-3">Adicionar Primitiva</button>
+                    <button type="button" class="btn btn-primary mt-3">Adicionar Primitiva</button>
                 </form>
             </div>
             <!--Aqui div de adicionar modelo e manipular objeto-->
