--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                         <input class="form-control mx-1" type="number" id="lightPosY" name="lightPosY" placeholder="Y" required style="width: 70px;">
                         <input class="form-control mx-1" type="number" id="lightPosZ" name="lightPosZ" placeholder="Z" required style="width: 70px;">
                     </div>
-                    <label for="lightPosition">Direção:</label>
+                    <label for="lightDirection">Direção:</label>
                     <div class="d-flex justify-content-evenly">
-                        <input class="form-control mx-1" type="number" id="lightPosX" name="lightPosX" placeholder="X" required style="width: 70px;">
-                        <input class="form-control mx-1" type="number" id="lightPosY" name="lightPosY" placeholder="Y" required style="width: 70px;">
-                        <input class="form-control mx-1" type="number" id="lightPosZ" name="lightPosZ" placeholder="Z" required style="width: 70px;">
+                        <input class="form-control mx-1" type="number" id="lightDirX" name="lightDirX" placeholder="X" required style="width: 70px;">
+                        <input class="form-control mx-1" type="number" id="lightDirY" name="lightDirY" placeholder="Y" required style="width: 70px;">
+                        <input class="form-control mx-1" type="number" id="lightDirZ" name="lightDirZ" placeholder="Z" required style="width: 70px;">
                     </div>
-                    <label for="lightPosition">Cor:</label>
+                    <label for="lightColor">Cor:</label>
                     <div class="d-flex justify-content-evenly">
                         <input class="form-control mx-1" type="number" id="lightColorR" name="lightColorR" placeholder="R" required style="width: 70px;">
                         <input class="form-control mx-1" type="number" id="lightColorG" name="lightColorG" placeholder="G" required style="width: 70px;">
