--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                     </div>
                     <div class="d-flex justify-content-evenly">
                         <div>
-                            <label for="height">Altura:</label>
-                            <input class="form-control mx-1" type="number" id="colorR" name="colorR" placeholder="R" required style="width: 70px;">
+                            <label for="primitiveHeight">Altura:</label>
+                            <input class="form-control mx-1" type="number" id="primitiveHeight" name="primitiveHeight" placeholder="altura" required style="width: 70px;">
                         </div>
                         <div>
-                            <label for="width">Largura:</label>
-                            <input class="form-control mx-1" type="number" id="colorG" name="colorG" placeholder="G" required style="width: 70px;">
+                            <label for="primitiveWidth">Largura:</label>
+                            <input class="form-control mx-1" type="number" id="primitiveWidth" name="primitiveWidth" placeholder="largura" required style="width: 70px;">
                         </div>
                         <div>
-                            <label for="depth">Profundidade:</label>
-                            <input class="form-control mx-1" type="number" id="colorB" name="colorB" placeholder="B" required style="width: 70px;">
+                            <label for="primitiveDepth">Profundidade:</label>
+                            <input class="form-control mx-1" type="number" id="primitiveDepth" name="primitiveDepth" placeholder="profundidade" required style="width: 70px;">
                         </div>
                     </div>
                     <div class="d-flex mt-3">
