--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <option value="Par2">Par2</option>
                         <option value="Par3">Par3</option>
                     </select>
-                    <button type="submit" class="btn btn-primary">Manipular Objeto</button>
+                    <button type="button" class="btn btn-primary">Manipular Objeto</button>
                 </form>
             </div>
             <!--Aqui div de adicionar luz-->
