--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <input class="form-control mx-1" type="number" id="lightColorG" name="lightColorG" placeholder="G" required style="width: 70px;">
                         <input class="form-control mx-1" type="number" id="lightColorB" name="lightColorB" placeholder="B" required style="width: 70px;">
                     </div>
-                    <button type="button" class="btn btn-primary mt-3">Adicionar Luz</button>
+                    <button type="submit" class="btn btn-primary mt-3">Adicionar Luz</button>
                 </form>
             </div>
         </div>
