feat(textures): add new textures and update form

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
                             <option value="pink">Pink</option>
                         </select>
                         <select id="textureSelect" class="form-select mx-1" style="display: none;">
-                            <option value="textura1">Textura 1</option>
-                            <option value="textura2">Textura 2</option>
+                            <option value="metal.jpg">Metal</option>
+                            <option value="box.png">Box</option>
+                            <option value="wood.jpg">Wood</option>
+                            <option value="slime.jpg">Slime</option>
                         </select>
                         <script>
                             const colorSelect = document.getElementById('colorSelect');
