feat(primitives): add primitives texturing and colorization

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           </div>
         </div>
         <div class="d-flex mt-3">
-          <select id="typeSelect" class="form-select mx-1">
+          <select id="primitiveAttribute" class="form-select mx-1">
             <option value="color">Cor</option>
             <option value="texture">Textura</option>
           </select>
-          <select id="colorSelect" class="form-select mx-1">
+          <select id="primitiveColor" class="form-select mx-1">
             <option value="red">Red</option>
             <option value="blue">Blue</option>
             <option value="yellow">Yellow</option>
@@ -55,7 +55,7 @@
             <option value="lime">Lime</option>
             <option value="pink">Pink</option>
           </select>
-          <select id="textureSelect" class="form-select mx-1" style="display: none;">
+          <select id="primitiveTexture" class="form-select mx-1" style="display: none;">
             <option value="metal.jpg">Metal</option>
             <option value="box.png">Box</option>
             <option value="wood.jpg">Wood</option>
