--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PA Room Design</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -35,26 +37,26 @@
           </div>
         </div>
         <div class="d-flex justify-content-evenly mb-2">
-            <div>
-              <input class="form-control mx-1" type="number" id="primitiveX" name="primitiveX" placeholder="PosX" required style="width: 90px;">
-            </div>
-            <div>
-              <input class="form-control mx-1" type="number" id="primitiveY" name="primitiveY" placeholder="PosY" required style="width: 90px;">
-            </div>
-            <div>
-              <input class="form-control mx-1" type="number" id="primitiveZ" name="primitiveZ" placeholder="PosZ" required style="width: 90px;">
-            </div>
+          <div>
+            <input class="form-control mx-1" type="number" id="primitiveX" name="primitiveX" placeholder="PosX" required style="width: 90px;">
+          </div>
+          <div>
+            <input class="form-control mx-1" type="number" id="primitiveY" name="primitiveY" placeholder="PosY" required style="width: 90px;">
+          </div>
+          <div>
+            <input class="form-control mx-1" type="number" id="primitiveZ" name="primitiveZ" placeholder="PosZ" required style="width: 90px;">
+          </div>
         </div>
         <div class="d-flex justify-content-evenly">
-            <div>
-                <input class="form-control mx-1" type="number" id="primitiveRotationX" name="primitiveRotationX" placeholder="RotX" required style="width: 90px;">
-            </div>
-            <div>
-                <input class="form-control mx-1" type="number" id="primitiveRotationY" name="primitiveRotationY" placeholder="RotY" required style="width: 90px;">
-            </div>
-            <div>
-                <input class="form-control mx-1" type="number" id="primitiveRotationZ" name="primitiveRotationZ" placeholder="RotZ" required style="width: 90px;">
-            </div>
+          <div>
+            <input class="form-control mx-1" type="number" id="primitiveRotationX" name="primitiveRotationX" placeholder="RotX" required style="width: 90px;">
+          </div>
+          <div>
+            <input class="form-control mx-1" type="number" id="primitiveRotationY" name="primitiveRotationY" placeholder="RotY" required style="width: 90px;">
+          </div>
+          <div>
+            <input class="form-control mx-1" type="number" id="primitiveRotationZ" name="primitiveRotationZ" placeholder="RotZ" required style="width: 90px;">
+          </div>
         </div>
         <div class="d-flex mt-2">
           <select id="primitiveAttribute" class="form-select mx-1">
@@ -126,6 +128,25 @@
     </div>
   </div>
 
+  <div class="modal fade" tabindex="-1" id="errorModal">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="errorModalTitle">Erro</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p id="errorModalMessage">Ocorreu um erro.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="js/form.js"></script>
   <script src="js/room.js"></script>
 </body>
