feat(primitives): remove required from position and rotation

--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
         </div>
         <div class="d-flex justify-content-evenly mb-2">
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveX" name="primitiveX" placeholder="PosX" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveX" name="primitiveX" placeholder="PosX" style="width: 90px;">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveY" name="primitiveY" placeholder="PosY" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveY" name="primitiveY" placeholder="PosY" style="width: 90px;">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveZ" name="primitiveZ" placeholder="PosZ" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveZ" name="primitiveZ" placeholder="PosZ" style="width: 90px;">
           </div>
         </div>
         <div class="d-flex justify-content-evenly">
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveRotationX" name="primitiveRotationX" placeholder="RotX" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveRotationX" name="primitiveRotationX" placeholder="RotX" style="width: 90px;">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveRotationY" name="primitiveRotationY" placeholder="RotY" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveRotationY" name="primitiveRotationY" placeholder="RotY" style="width: 90px;">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveRotationZ" name="primitiveRotationZ" placeholder="RotZ" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveRotationZ" name="primitiveRotationZ" placeholder="RotZ" style="width: 90px;">
           </div>
         </div>
         <div class="d-flex mt-2">
