--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         </div>
         <div class="d-flex justify-content-evenly mb-2">
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveX" name="primitiveX" placeholder="PosX" style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveX" name="primitiveX" placeholder="PosX" style="width: 90px;" max="4" min="-4">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveY" name="primitiveY" placeholder="PosY" style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveY" name="primitiveY" placeholder="PosY" style="width: 90px;" max="9" min="0">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveZ" name="primitiveZ" placeholder="PosZ" style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveZ" name="primitiveZ" placeholder="PosZ" style="width: 90px;" max="4" min="-4">
           </div>
         </div>
         <div class="d-flex justify-content-evenly">
