--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </div>
         <div class="d-flex justify-content-evenly mb-2">
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveHeight" name="primitiveHeight" placeholder="Altura" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveHeight" name="primitiveHeight" placeholder="Altura" required style="width: 90px;" min="1" max="10">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveWidth" name="primitiveWidth" placeholder="Largura" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveWidth" name="primitiveWidth" placeholder="Largura" required style="width: 90px;" min="1" max="10">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveDepth" name="primitiveDepth" placeholder="Profundidade" required style="width: 90px;">
+            <input class="form-control mx-1" type="number" id="primitiveDepth" name="primitiveDepth" placeholder="Profundidade" required style="width: 90px;" min="1" max="10">
           </div>
         </div>
         <div class="d-flex justify-content-evenly mb-2">
