chore: change form default values and min max values

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
             <input class="form-control mx-1" type="number" id="lightPosZ" name="lightPosZ" placeholder="PosZ" required style="width: 90px;" value="8">
           </div>
           <div class="d-flex justify-content-evenly mt-2">
-            <input class="form-control mx-1" type="number" id="lightDirX" name="lightDirX" placeholder="DirX" required style="width: 90px;" value="255">
-            <input class="form-control mx-1" type="number" id="lightDirY" name="lightDirY" placeholder="DirY" required style="width: 90px;" value="255">
-            <input class="form-control mx-1" type="number" id="lightDirZ" name="lightDirZ" placeholder="DirZ" required style="width: 90px;" value="255">
+            <input class="form-control mx-1" type="number" id="lightDirX" name="lightDirX" placeholder="DirX" required style="width: 90px;" value="0">
+            <input class="form-control mx-1" type="number" id="lightDirY" name="lightDirY" placeholder="DirY" required style="width: 90px;" value="0">
+            <input class="form-control mx-1" type="number" id="lightDirZ" name="lightDirZ" placeholder="DirZ" required style="width: 90px;" value="0">
           </div>
           <div class="d-flex justify-content-evenly mt-2">
             <input class="form-control mx-1" type="number" id="lightColorR" name="lightColorR" placeholder="R" required style="width: 90px;" value="255" min="0" max="255">
@@ -156,7 +156,7 @@
         <div class="d-flex flex-column align-items-center justify-content-center">
           <div class="d-flex justify-content-evenly mt-2">
             <input class="form-control mx-1" type="number" id="pointLightIntensity" name="pointLightIntensity" placeholder="Intensidade" required style="width: 90px;">
-            <input class="form-control mx-1" type="number" id="pointLightDecay" name="decay" placeholder="Decadência" required style="width: 90px;" value="1" min="0" max="255">
+            <input class="form-control mx-1" type="number" id="pointLightDecay" name="decay" placeholder="Decadência" required style="width: 90px;" value="1">
           </div>
           <div class="d-flex justify-content-evenly mt-2">
             <input class="form-control mx-1" type="number" id="pointLightPosX" name="pointLightPosX" placeholder="PosX" required style="width: 90px;" value="1">
