feat(ui): add border to canvas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-  <canvas class="d-block" id="gl-canvas" width="800" height="800"></canvas>
+  <canvas class="d-block border border-3 border-black" id="gl-canvas" width="800" height="800"></canvas>
 
   <div class="d-flex flex-column justify-content-evenly align-items-center menu">
     <small class="text-center">Campos a vermelho são obrigatórios.</small>
