--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </div>
         <div class="d-flex justify-content-evenly mb-2">
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveX" name="primitiveX" placeholder="PosX" style="width: 90px;" min="-5" max="5">
+            <input class="form-control mx-1" type="number" id="primitiveX" name="primitiveX" placeholder="PosX" style="width: 90px;" min="-5" max="5" step="0.01">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveY" name="primitiveY" placeholder="PosY" style="width: 90px;" min="0" max="10">
+            <input class="form-control mx-1" type="number" id="primitiveY" name="primitiveY" placeholder="PosY" style="width: 90px;" min="0" max="10" step="0.01">
           </div>
           <div>
-            <input class="form-control mx-1" type="number" id="primitiveZ" name="primitiveZ" placeholder="PosZ" style="width: 90px;" min="-5" max="5">
+            <input class="form-control mx-1" type="number" id="primitiveZ" name="primitiveZ" placeholder="PosZ" style="width: 90px;" min="-5" max="5" step="0.01">
           </div>
         </div>
         <div class="d-flex justify-content-evenly">
