--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
       <form id="addDirectionalLightForm" class="flex-column align-items-center justify-content-center">
         <div class="d-flex flex-column align-items-center justify-content-center">
           <div class="d-flex justify-content-evenly mt-2">
-            <input class="form-control mx-1" type="number" id="lightPosX" name="lightPosX" placeholder="PosX" required style="width: 90px;" value="5">
-            <input class="form-control mx-1" type="number" id="lightPosY" name="lightPosY" placeholder="PosY" required style="width: 90px;" value="10">
-            <input class="form-control mx-1" type="number" id="lightPosZ" name="lightPosZ" placeholder="PosZ" required style="width: 90px;" value="8">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightPosX" name="lightPosX" placeholder="PosX" required style="width: 90px;" value="5">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightPosY" name="lightPosY" placeholder="PosY" required style="width: 90px;" value="10">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightPosZ" name="lightPosZ" placeholder="PosZ" required style="width: 90px;" value="8">
           </div>
           <div class="d-flex justify-content-evenly mt-2">
-            <input class="form-control mx-1" type="number" id="lightDirX" name="lightDirX" placeholder="DirX" required style="width: 90px;" value="0">
-            <input class="form-control mx-1" type="number" id="lightDirY" name="lightDirY" placeholder="DirY" required style="width: 90px;" value="0">
-            <input class="form-control mx-1" type="number" id="lightDirZ" name="lightDirZ" placeholder="DirZ" required style="width: 90px;" value="0">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightDirX" name="lightDirX" placeholder="DirX" required style="width: 90px;" value="0">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightDirY" name="lightDirY" placeholder="DirY" required style="width: 90px;" value="0">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightDirZ" name="lightDirZ" placeholder="DirZ" required style="width: 90px;" value="0">
           </div>
           <div class="d-flex justify-content-evenly mt-2">
-            <input class="form-control mx-1" type="number" id="lightColorR" name="lightColorR" placeholder="R" required style="width: 90px;" value="255" min="0" max="255">
-            <input class="form-control mx-1" type="number" id="lightColorG" name="lightColorG" placeholder="G" required style="width: 90px;" value="255" min="0" max="255">
-            <input class="form-control mx-1" type="number" id="lightColorB" name="lightColorB" placeholder="B" required style="width: 90px;" value="255" min="0" max="255">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightColorR" name="lightColorR" placeholder="R" required style="width: 90px;" value="255" min="0" max="255">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightColorG" name="lightColorG" placeholder="G" required style="width: 90px;" value="255" min="0" max="255">
+            <input class="form-control mx-1 border border-danger" type="number" id="lightColorB" name="lightColorB" placeholder="B" required style="width: 90px;" value="255" min="0" max="255">
           </div>
           <button type="submit" class="btn btn-primary mt-2 mb-2">Adicionar Luz</button>
         </div>
