--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <form id="addAmbientLightForm" class="flex-column align-items-center justify-content-center" style="display: none">
         <div class="d-flex flex-column align-items-center justify-content-center">
           <div class="d-flex justify-content-evenly mt-2">
-            <input class="form-control mx-1" type="number" id="ambientLightIntensity" name="ambientLightIntensity" placeholder="Intensidade" value="1" required style="width: 90px;">
+            <input class="form-control mx-1 border border-danger" type="number" id="ambientLightIntensity" name="ambientLightIntensity" placeholder="Intensidade" value="1" required style="width: 90px;">
           </div>
           <div class="d-flex justify-content-evenly mt-2">
             <input class="form-control mx-1 border border-danger" type="number" id="ambientLightR" name="lightColorR" placeholder="R" required style="width: 90px;" min="0" max="255">
